# raytracing-opengl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
CMakeModules/: FindGLFW.cmake
assets/: colormaps.h  rt.cl  rt.comp  rt.frag  rt.vert  rt_o.comp
assets/shaders/: SMAA.h  quad.vert  rt.frag
common/: OpenCLUtil.cpp  OpenCLUtil.h  OpenGLUtil.cpp  OpenGLUtil.h
external_sources/glad/: CMakeLists.txt
external_sources/glad/include/glad/: glad.h
external_sources/glad/src/: glad.c
external_sources/stb_image/: stb_image.h
src/: GLWrapper.cpp  GLWrapper.h  SMAA_Builder.h  SceneManager.cpp  SceneManager.h  SearchTex.h  Surface.h  debuggable_comp.cpp  main.cpp  primitives.h  quaternion.h  rt.cpp  scene.h  shader.h  utils.h
